--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,27 @@ cacache = { version = "13.0.0", default-features = false, features = [
   "mmap",
 ] }
 env_logger = "0.11.5"
+ethaddr = "0.2.2"
 
 revm = { version = "17.1.0", features = ["alloydb"] }
 tokio = { version = "1.40.0", features = ["full"] }
 
+
 [[bin]]
 name = "eth_call_one"
 path = "src/eth_call_one.rs"
+
+[[bin]]
+name = "sample"
+path = "src/to_checksum_address.rs"
+
+[[bin]]
+name = "eth_call_one_avax"
+path = "src/eth_call_one_avax.rs"
+
+[[bin]]
+name = "eth_call_one_ronin"
+path = "src/eth_call_one_ronin.rs"
 
 [[bin]]
 name = "eth_call"
