--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ ethaddr = "0.2.2"
 
 revm = { version = "17.1.0", features = ["alloydb"] }
 tokio = { version = "1.40.0", features = ["full"] }
+bytes = "1.7.2"
 
 
 [[bin]]
