--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,15 @@ ethaddr = "0.2.2"
 revm = { version = "17.1.0", features = ["alloydb"] }
 tokio = { version = "1.40.0", features = ["full"] }
 bytes = "1.7.2"
+
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
+serde_json = "1.0.140"
+clap = { version = "4.5.39", features = ["derive"] }
+
+
+[[bin]]
+name = "simulate"
+path = "src/bin/simulate.rs"
+# CLI arguments
+clap = { version = "4", features = ["derive"] }
