Update: refactor revm sims for multiple chain | ronin not work -> investigate later

--- a/src/config/avax.toml
+++ b/src/config/avax.toml
@@ -3,6 +3,10 @@ rpc_url = "https://api.avax.network/ext/bc/C/rpc"
 gas_multiplier = 10.0
 
 [tokens]
+ME = "0000000000000000000000000000000000000001"
 WAVAX = "0xB31f66AA3C1e785363F0875A1B74E27b85FD66c7"
 USDC  = "0xB97EF9Ef8734C71904D8002F8b6Bc66Dd9c48a6E"
 QUOTER = "0xbe0F5544EC67e9B3b2D979aaA43f18Fd87E6257F"
+POOL_3000 = "0x0e663593657b064e1bae76d28625df5d0ebd4421"
+POOL_500 = "0xfae3f424a0a47706811521e3ee268f00cfb5c45e"
+CUSTOM_QUOTER = "0xA5C381211A406b48A073E954e6949B0D49506bc0"
