--- a/src/config/ronin.toml
+++ b/src/config/ronin.toml
@@ -3,6 +3,11 @@ rpc_url = "https://ronin.gateway.tenderly.co/7dNLdBPOaPCaNqVx5pZ10s"
 gas_multiplier = 1.0
 
 [tokens]
+ME = "0000000000000000000000000000000000000001"
 WETH = "0xc99a6A985eD2Cac1ef41640596C5A5f9F4E19Ef5"
 WRON = "0xe514d9DEB7966c8BE0ca922de8a064264eA6bcd4"
+USDC = "0x0b7007c13325c48911f73a2dad5fa5dcbf808adc"
 QUOTER = "0x84ab2f9fdc4bf66312b0819d879437b8749efdf2"
+
+CUSTOM_QUOTER = "0xA5C381211A406b48A073E954e6949B0D49506bc0"
+
