--- a/src/config/eth.toml
+++ b/src/config/eth.toml
@@ -2,6 +2,14 @@ chain_id = 1
 rpc_url = "https://eth.merkle.io"
 gas_multiplier = 1.1
 
+rpc_urls = [
+    "https://eth.merkle.io",
+    "https://eth.llamarpc.com",
+    "https://eth.meowrpc.com",
+    "https://0xrpc.io/eth",
+    "https://eth.drpc.org",
+]
+
 [tokens]
 ME = "0000000000000000000000000000000000000001"
 WETH = "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
