--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ toml = "0.8"
 serde_json = "1.0.140"
 clap = { version = "4.5.39", features = ["derive"] }
 
+futures = "0.3" # ADD nếu chưa có để dùng FuturesUnordered
+
 
 [[bin]]
 name = "simulate"
